src/components/site-header/_site-header.scss
/* ... */
.site-header__search-close {
  z-index: 11;
  position: relative;
  background-color: transparent;
  border: none;
  cursor: pointer;
  font-size: rem(26);
  color: $iastate-red;
  opacity: 0;
  visibility: hidden;
  transition: 0.2s opacity ease-in-out;
  height: rem(44);
  min-width: rem(44);
  top: rem(4);
  left: rem(-27);
  display: none;
  &[aria-hidden="false"] {
    display: block;
    position: absolute;
    left: initial;
    opacity: 1;
    visibility: visible;
    .site-header--ecosystem & {
      top: rem(-5);
    }
  }
}

// close button for when js is disabled
.nojs-close-menu {
  html:not(.js) & {
    text-align: right;
    padding-right: 40px;
    margin-top: 10px;
    color: $white;
    display: block;
  }
}

// Styles for ecosystem site header variant only
.site-header__parent-unit-name {
  position: absolute;
  top: rem(52);
  left: rem(35);
  font-family: $typeface-sans-serif;
  font-size: rem(18);
  line-height: (23 / 18);
  color: $iastate-red;
  opacity: 0;
  transition: 0.2s opacity ease-in-out, 0.2s color ease-in-out;
  max-width: rem(275);
  display: inline-block;
  text-decoration: none;
  pointer-events: none;

  @include media-breakpoint-up(xl) {
    position: static;
    opacity: 1;
    font-size: rem(16);
    line-height: (23 / 16);
    font-weight: 700;
    margin-top: rem(6);
    pointer-events: all;
  }

  .headroom--unpinned & {
    @include media-breakpoint-up(xl) {
      opacity: 0;
    }
  }

  &:hover {
    color: $iastate-maroon;
  }

  .site-header-open & {
    opacity: 1;
    z-index: 1;
    pointer-events: all;
  }
}
.site-header__website-title {
  background-color: $off-white;
  flex: 0 1 auto;
  width: 100vw;
  margin-top: rem(54);
  margin-right: rem(-58);
  padding: rem(10) rem(38);
  font-family: $typeface-sans-serif;
  font-weight: 700;
  font-size: rem(18);
  line-height: (23 / 18);
  color: $iastate-maroon;
  transition: 0.2s opacity ease-in-out;
  @include media-breakpoint-up(xl) {
    display: none;
  }
  .site-header-open & {
    opacity: 0;
  }
  .site-header__mega-menu-main & {
    opacity: 1;
    margin: 0 0 rem(28) 0;
    background: transparent;
    width: auto;
    padding: 0;
    color: $white;
    @include media-breakpoint-up(xl) {
      max-width: rem(250);
      color: $iastate-maroon;
      display: block;
      margin: 0;
    }
    a {
      .site-header-open & {
        pointer-events: all;
      }
    }
  }
  a {
    color: currentColor;
    text-decoration: none;
    transition: 0.3s color ease-in-out;
    &:hover {
      text-decoration: underline;
      @include media-breakpoint-up(xl) {
        color: $iastate-red;
        text-decoration: none;
      }
    }
    .site-header-open & {
      pointer-events: none;
    }
  }
}

.site-header__utility-button {
  background-color: $iastate-red;
  color: $white;
  padding: rem(2) rem(30) rem(2) rem(15);
  top: rem(3);
  position: relative;
  text-decoration: none;
  font-weight: 700;
  transition: 0.2s background-color ease-in-out, 0.2s opacity ease-in-out;
  display: none;
  @include media-breakpoint-up(xl) {
    margin-left: rem(20);
    display: block;
  }
  @include media-breakpoint-up(xxl) {
    margin-left: rem(5);
  }

  .headroom--unpinned & {
    @include media-breakpoint-up(xl) {
      opacity: 0;
    }
  }
  &:hover {
    background-color: $iastate-maroon;
    color: $white;
  }
  span {
    position: relative;
    &:after {
      content: "";
      position: absolute;
      border-right: rem(2) solid $iastate-gold;
      border-bottom: rem(2) solid $iastate-gold;
      width: rem(10);
      height: rem(10);
      margin-left: rem(4);
      top: rem(4);
      transform: rotate(-45deg);
    }
  }
  .site-header__mega-menu-utility & {
    background-color: $white;
    color: $iastate-maroon;
    margin-top: rem(30);
    display: inline-block;
    position: static;
    transition: 0.2s background-color ease-in-out, 0.2s color ease-in-out;
    &:hover {
      color: $iastate-red;
      background-color: $off-white;
      span {
        &:after {
          border-color: $iastate-red;
        }
      }
    }
    span {
      &:after {
        transition: 0.2s border-color ease-in-out;
        border-color: $iastate-maroon;
      }
    }
  }
}

.site-header__utility-search-wrap {
  @include media-breakpoint-up(xl) {
    display: flex;
    align-items: flex-end;
  }
}

